drugHome changement 3 tableaux, bug text vertical, aligncenter text

--- a/css/drugs.css
+++ b/css/drugs.css
@@ -23,12 +23,14 @@
 }
 
 .txtvertical {
-    writing-mode: vertical-rl;
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-    width: 20px;
-    height: 20px;
+    padding: 3px;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+
+}
+
+.aligncenter{
+    text-align: center;
 }
